template design changed

--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "node-express-app",
+  "name": "nodeexpress",
   "version": "1.0.0",
-  "description": "Node Express Application",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-	"postinstall" : "./node_modules/bower/bin/bower install",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "node",
-    "express"
-  ],
-  "author": "Nagendra Padamara",
-  "license": "ISC",
-  "devDependencies": {
-    "bower": "^1.7.9",
-    "express": "^4.14.0"
+  "repository": "",
+  "author": "",
+  "license": "BSD",
+  "gitHead": "149ba936713855fd1c3b02d0fb7439e97d665c71",
+  "dependencies": {
+    "express": "~3.4.7"
   }
 }
